[webIF] - fixed performance issues - fixed scrollbar - small tweaks in movie and episode section

--- a/ValerieMediaCenter/DMC_Plugins/DMC_WebInterfaceExtras/content/global/css/main.css
+++ b/ValerieMediaCenter/DMC_Plugins/DMC_WebInterfaceExtras/content/global/css/main.css
@@ -78,7 +78,7 @@ td {
     margin-bottom: 8px;
     width: 990px;
     min-height: 768px;
-	overflow: auto;
+	/*overflow: auto;*/
 }
 
 
@@ -214,7 +214,7 @@ tr:hover {
 img {border: none; }
 
 .action_img {
-	padding: 5px;
+	padding: 1px;
 	border: none;
 }
 
